cmake_minimum_required(VERSION 3.13)
project(C_Python)

set(CMAKE_CXX_STANDARD 14)
add_executable(binarySearch CPP_File/binarySearch.cpp)
add_executable(arrayDemo CPP_File/arrayDemo.cpp)
add_executable(2dArrayDemo CPP_File/2dArrayDemo.cpp)
add_executable(arrayAvg CPP_File/arrayAvg.cpp)
add_executable(User_LexString CPP_File/User_LexString.cpp)
add_executable(StringQuery CPP_File/StringQuery.cpp)
add_executable(Iceland_Range CPP_File/Iceland_Range.cpp)
add_executable(Collision_Calc CPP_File/Collision_Calc.cpp)
add_executable(Tree_Demo CPP_File/BinaryTree.cpp)
add_executable(linkedList CPP_File/linkedList.cpp)
add_executable(LevelOrderTree CPP_File/LevelOrderTree.cpp)
add_executable(NumberConversion CPP_File/NumberConversion.cpp)
add_executable(primeNumber CPP_File/primeNumber.cpp)
add_executable(RadixSort CPP_File/RadixSort.cpp)
add_executable(temp CPP_File/temp.cpp)
add_executable(RunTime_Calc CPP_File/RunTime_Calc.cpp)
add_executable(CArena CPP_File/CArena.cpp)
add_executable(CountingInversion CPP_File/CountingInversion.cpp)
add_executable(Solution_Adj_Squre CPP_File/Solution_Adj_Squre.cpp)